# gitea-sandbox-adapter

./: .editorconfig  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  ci.md  deterministic-population.md  failure-catalog.md  runbook.md  snapshot-format.md  threat-model.md
docs/evidence/: phase-2-execution.md  snapshot-manifest-example.json
fixtures/: gitea_seed.json
scripts/: redact_ci_log.py  run_fault_injection.py
src/gitea_sandbox_adapter/: __init__.py  __main__.py  api.py  browser_validation.py  ci_redaction.py  cli.py  config.py  diagnostics.py  docker.py  errors.py  models.py  population.py  ports.py  redaction.py  runtime.py  snapshot.py  validation.py
tests/: __init__.py  conftest.py  test_api.py  test_browser_validation.py  test_ci_configuration.py  test_ci_redaction.py  test_cli.py  test_config.py  test_docker.py  test_integration_runtime.py  test_ports.py  test_redaction.py  test_runtime.py  test_snapshot.py
