[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitea-sandbox-adapter"
version = "0.1.0"
description = "Production-style local Gitea and PostgreSQL sandbox adapter."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Bhawna Pannu" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "playwright>=1.46",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
gitea-sandbox = "gitea_sandbox_adapter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "-p",
  "no:cacheprovider",
]
markers = [
  "integration: real Docker/Gitea/PostgreSQL integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = [
  "src",
  "tests",
]
